fix nav menu items from wrapping on close, fixing mobile titles color for dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,7 +66,7 @@ body {
   padding: spacing(0, 3);
 }
 h4{
-  color: #061020;
+  color: var(--color-text-primary);
 }
 h3{
  color:$white;
